starting sign up page

--- a/HTML Website for DOM/index.html
+++ b/HTML Website for DOM/index.html
@@ -3,26 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/8dda972102.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css">
     <title>PETS MANIA | HOME</title>
 </head>
 <body>
     <header class="header">
-        <nav class="navii constainer">
+        <nav class="navii container">
             <div class="logoNbtns">
-                <a href="">PM</a>
+                <a href="" class="logoo">PM</a>
                 <ul class="btns">
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li class="nav-items itm1"><a href="">HOME</a></li>
+                    <li class="nav-items itm2"><a href="">CATAGORIES<a></li>
+                    <li class="nav-items itm3"><a href="">BREEDS</a></li>
                 </ul>
             </div>
             <div class="signInBtn">
-                <div class="inBtn">
-                    <a href="">Sign In</a>
-                </div>
+                <a href="./signup.html">Sign In</a>
             </div>
         </nav>
+        <div class="head">
+            <div class="imgs">
+                <div class="img-box img1">
+                    <img src="./img/cat.jpg" alt="">
+                    <div class="content content1 img1-content">
+                        <h2>This Cute Kity is Waiting for You.</h2>
+                        <a href="">Buy Now</a>
+                    </div>
+                </div>
+                <div class="img-box img2">
+                    <img src="./img/dog.jpg" alt="">
+                    <div class="content content2 img2-content">
+                        <h2>This Beautiful Doggy is now Available<br> at Cheap Price.</h2>
+                        <a href="">Buy Now</a>
+                    </div>
+                </div>
+                <div class="img-box img3">
+                    <img src="./img/mice.jpg" alt="">
+                    <div class="content content3 img3-content">
+                        <h2>Give them Freedom !!! This Sort of pets<br> should not be Keep in Cages.</h2>
+                        <a href="">Buy Now</a>
+                    </div>
+                </div>
+                <div class="img-box img4">
+                    <img src="./img/parrot.jpg" alt="">
+                    <div class="content content4 img4-content">
+                        <h2>This Parrot Can be Yours at<br> Extremely Cheap Price.</h2>
+                        <a href="">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
+    <footer class="real-foot">
+        <div class="container">
+            <div class="for-text">
+                <div class="sm-links">
+                    <a href="https://www.facebook.com/profile.php?id=100074134989698" title="Facebook"><i class="fab fa-facebook fa-2x"></i></a>
+                    <a href="https://www.instagram.com/_____aint_i__4dil/" title="Instagram"><i class="fab fa-instagram fa-2x"></i></a>
+                    <a href="" title="Twitter"><i class="fab fa-twitter fa-2x"></i></a>
+                </div>
+                <div class="last-word">Pets Mania &copy; 2023, All Rights Reserved</div>
+            </div>    
+        </div>
+    </footer>
 </body>
 </html>
