--- a/HTML Website for DOM/signup.html
+++ b/HTML Website for DOM/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style2.css">
-    <title>Document</title>
+    <title>PETS MANIA | SIGN IN</title>
 </head>
 <body>
     <header>
@@ -21,6 +21,15 @@
                 <a href="">Sign In</a>
             </div>
         </nav>
+        <section class="insection container">
+            <div class="buythings">
+                <p>Somthing About You.</p>
+            </div>
+            <div class="input-btn">
+                <input type="text" placeholder="clickfiles">
+                <a href="" class="todo">Add Todo</a>
+            </div>
+        </section>
     </header>
 </body>
 </html>
